dumped db into fixture, trying to fix background color when tapping link on iphone

--- a/django_ters/static/styles-sass/base-styles.scss
+++ b/django_ters/static/styles-sass/base-styles.scss
@@ -28,6 +28,7 @@
 
 html {
   scroll-behavior: smooth;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 body,
